src/test/resources/parse/MutableCompanionFunction.out
error: Companion function cannot be mutable
--> ./MutableCompanionFunction.casc:4:4
3 | impl MutableCompanionFunction {
4 |     mut fn a1() {}
        ^^^= hint: Remove this `mut` keyword
5 | }