src/test/resources/parse/MutableCompanionFunction.casc
class MutableCompanionFunction

impl MutableCompanionFunction {
    mut fn a1() {}
}